--- a/KhaiBaoYTeKiosk/KhaiBaoYTeKiosk.csproj
+++ b/KhaiBaoYTeKiosk/KhaiBaoYTeKiosk.csproj
@@ -8,184 +8,46 @@
 
   <ItemGroup>
     <None Remove="Resources\Images\ball.png" />
-    <None Remove="Resources\Images\banner.webp" />
-    <None Remove="Resources\Images\banner02.webp" />
-    <None Remove="Resources\Images\bannerFirst.webp" />
-    <None Remove="Resources\Images\bg.webp" />
-    <None Remove="Resources\Images\bgr.webp" />
-    <None Remove="Resources\Images\bgrTrans.webp" />
     <None Remove="Resources\Images\bg_login.png" />
-    <None Remove="Resources\Images\bg_m.webp" />
     <None Remove="Resources\Images\btn_cq.png" />
-    <None Remove="Resources\Images\btn_cq.webp" />
     <None Remove="Resources\Images\btn_csyt.png" />
-    <None Remove="Resources\Images\btn_csyt.webp" />
-    <None Remove="Resources\Images\bt_1022.webp" />
-    <None Remove="Resources\Images\checkin.webp" />
-    <None Remove="Resources\Images\checkin_off.webp" />
-    <None Remove="Resources\Images\chuaantoan.webp" />
-    <None Remove="Resources\Images\crirle_dndo.webp" />
-    <None Remove="Resources\Images\crirle_dnvang.webp" />
-    <None Remove="Resources\Images\crirle_dnxanh.webp" />
-    <None Remove="Resources\Images\favi_icon_KBYT.webp" />
-    <None Remove="Resources\Images\ico_app.webp" />
-    <None Remove="Resources\Images\ico_binhthuong.webp" />
-    <None Remove="Resources\Images\ico_camera.webp" />
-    <None Remove="Resources\Images\ico_canhbao.webp" />
-    <None Remove="Resources\Images\ico_conguyco.webp" />
-    <None Remove="Resources\Images\ico_error.webp" />
     <None Remove="Resources\Images\ico_error_login.png" />
-    <None Remove="Resources\Images\ico_error_login.webp" />
+    <None Remove="Resources\Images\ico_error_warn.png" />
     <None Remove="Resources\Images\ico_greencheck.png" />
     <None Remove="Resources\Images\ico_greencheck2.png" />
     <None Remove="Resources\Images\ico_home.png" />
-    <None Remove="Resources\Images\ico_kbyt_gray.webp" />
-    <None Remove="Resources\Images\ico_kbyt_green.webp" />
-    <None Remove="Resources\Images\ico_kbyt_org.webp" />
-    <None Remove="Resources\Images\ico_kbyt_red.webp" />
     <None Remove="Resources\Images\ico_letterX.png" />
-    <None Remove="Resources\Images\ico_pass.webp" />
     <None Remove="Resources\Images\ico_RedShield.png" />
-    <None Remove="Resources\Images\ico_tiem_gray.webp" />
-    <None Remove="Resources\Images\ico_tiem_green.webp" />
-    <None Remove="Resources\Images\ico_tiem_org.webp" />
-    <None Remove="Resources\Images\ico_tiem_red.webp" />
-    <None Remove="Resources\Images\ico_user.webp" />
-    <None Remove="Resources\Images\ico_vang.webp" />
-    <None Remove="Resources\Images\ico_xn_gray.webp" />
-    <None Remove="Resources\Images\ico_xn_green.webp" />
-    <None Remove="Resources\Images\ico_xn_red.webp" />
+    <None Remove="Resources\Images\img_emptyqr.jpg" />
     <None Remove="Resources\Images\img_scan.png" />
-    <None Remove="Resources\Images\kbyt_bv.webp" />
-    <None Remove="Resources\Images\kbyt_bv1.webp" />
-    <None Remove="Resources\Images\kbyt_bv4.webp" />
-    <None Remove="Resources\Images\kbyt_cq.webp" />
-    <None Remove="Resources\Images\kbyt_cq1.webp" />
-    <None Remove="Resources\Images\kbyt_cq4.webp" />
-    <None Remove="Resources\Images\logo.webp" />
-    <None Remove="Resources\Images\logoAppKhaiBaoYte.webp" />
-    <None Remove="Resources\Images\logo_app.webp" />
     <None Remove="Resources\Images\logo_password.png" />
     <None Remove="Resources\Images\logo_SoYTeHCM.png" />
-    <None Remove="Resources\Images\Logo_SoYTeHCM.webp" />
-    <None Remove="Resources\Images\logo_SoYTeHCM_V2.webp" />
-    <None Remove="Resources\Images\logo_so_tttt.webp" />
-    <None Remove="Resources\Images\logo_so_y_te_hcm.webp" />
-    <None Remove="Resources\Images\logo_ttcn.webp" />
     <None Remove="Resources\Images\logo_user.png" />
-    <None Remove="Resources\Images\mobile.webp" />
-    <None Remove="Resources\Images\mui1.webp" />
-    <None Remove="Resources\Images\mui2.webp" />
-    <None Remove="Resources\Images\mui3.webp" />
-    <None Remove="Resources\Images\nguoi_den.webp" />
-    <None Remove="Resources\Images\nguoi_do.webp" />
-    <None Remove="Resources\Images\nguoi_vang.webp" />
-    <None Remove="Resources\Images\nguoi_xanh.webp" />
-    <None Remove="Resources\Images\no_data.webp" />
-    <None Remove="Resources\Images\pheduyet.webp" />
-    <None Remove="Resources\Images\scanqr.webp" />
-    <None Remove="Resources\Images\scanqr4.webp" />
-    <None Remove="Resources\Images\surface_1.webp" />
-    <None Remove="Resources\Images\tamdung.webp" />
-    <None Remove="Resources\Images\textTuanthu.webp" />
-    <None Remove="Resources\Images\text_dthotro.webp" />
-    <None Remove="Resources\Images\thedo.webp" />
-    <None Remove="Resources\Images\thexanh.webp" />
-    <None Remove="Resources\Images\tokhai.webp" />
-    <None Remove="Resources\Images\tokhai4.webp" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MVVMEssentials.WPF" Version="1.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="QRCoder" Version="1.4.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="Resources\Images\ball.png" />
-    <Resource Include="Resources\Images\banner.webp" />
-    <Resource Include="Resources\Images\banner02.webp" />
-    <Resource Include="Resources\Images\bannerFirst.webp" />
-    <Resource Include="Resources\Images\bg.webp" />
-    <Resource Include="Resources\Images\bgr.webp" />
-    <Resource Include="Resources\Images\bgrTrans.webp" />
     <Resource Include="Resources\Images\bg_login.png" />
-    <Resource Include="Resources\Images\bg_m.webp" />
     <Resource Include="Resources\Images\btn_cq.png" />
-    <Resource Include="Resources\Images\btn_cq.webp" />
     <Resource Include="Resources\Images\btn_csyt.png" />
-    <Resource Include="Resources\Images\btn_csyt.webp" />
-    <Resource Include="Resources\Images\bt_1022.webp" />
-    <Resource Include="Resources\Images\checkin.webp" />
-    <Resource Include="Resources\Images\checkin_off.webp" />
-    <Resource Include="Resources\Images\chuaantoan.webp" />
-    <Resource Include="Resources\Images\crirle_dndo.webp" />
-    <Resource Include="Resources\Images\crirle_dnvang.webp" />
-    <Resource Include="Resources\Images\crirle_dnxanh.webp" />
-    <Resource Include="Resources\Images\favi_icon_KBYT.webp" />
-    <Resource Include="Resources\Images\ico_app.webp" />
-    <Resource Include="Resources\Images\ico_binhthuong.webp" />
-    <Resource Include="Resources\Images\ico_camera.webp" />
-    <Resource Include="Resources\Images\ico_canhbao.webp" />
-    <Resource Include="Resources\Images\ico_conguyco.webp" />
-    <Resource Include="Resources\Images\ico_error.webp" />
     <Resource Include="Resources\Images\ico_error_login.png" />
-    <Resource Include="Resources\Images\ico_error_login.webp" />
+    <Resource Include="Resources\Images\ico_error_warn.png" />
     <Resource Include="Resources\Images\ico_greencheck.png" />
     <Resource Include="Resources\Images\ico_greencheck2.png" />
     <Resource Include="Resources\Images\ico_home.png" />
-    <Resource Include="Resources\Images\ico_kbyt_gray.webp" />
-    <Resource Include="Resources\Images\ico_kbyt_green.webp" />
-    <Resource Include="Resources\Images\ico_kbyt_org.webp" />
-    <Resource Include="Resources\Images\ico_kbyt_red.webp" />
     <Resource Include="Resources\Images\ico_letterX.png" />
-    <Resource Include="Resources\Images\ico_pass.webp" />
     <Resource Include="Resources\Images\ico_RedShield.png" />
-    <Resource Include="Resources\Images\ico_tiem_gray.webp" />
-    <Resource Include="Resources\Images\ico_tiem_green.webp" />
-    <Resource Include="Resources\Images\ico_tiem_org.webp" />
-    <Resource Include="Resources\Images\ico_tiem_red.webp" />
-    <Resource Include="Resources\Images\ico_user.webp" />
-    <Resource Include="Resources\Images\ico_vang.webp" />
-    <Resource Include="Resources\Images\ico_xn_gray.webp" />
-    <Resource Include="Resources\Images\ico_xn_green.webp" />
-    <Resource Include="Resources\Images\ico_xn_red.webp" />
+    <Resource Include="Resources\Images\img_emptyqr.jpg" />
     <Resource Include="Resources\Images\img_scan.png" />
-    <Resource Include="Resources\Images\kbyt_bv.webp" />
-    <Resource Include="Resources\Images\kbyt_bv1.webp" />
-    <Resource Include="Resources\Images\kbyt_bv4.webp" />
-    <Resource Include="Resources\Images\kbyt_cq.webp" />
-    <Resource Include="Resources\Images\kbyt_cq1.webp" />
-    <Resource Include="Resources\Images\kbyt_cq4.webp" />
-    <Resource Include="Resources\Images\logo.webp" />
-    <Resource Include="Resources\Images\logoAppKhaiBaoYte.webp" />
-    <Resource Include="Resources\Images\logo_app.webp" />
     <Resource Include="Resources\Images\logo_password.png" />
     <Resource Include="Resources\Images\logo_SoYTeHCM.png" />
-    <Resource Include="Resources\Images\Logo_SoYTeHCM.webp" />
-    <Resource Include="Resources\Images\logo_SoYTeHCM_V2.webp" />
-    <Resource Include="Resources\Images\logo_so_tttt.webp" />
-    <Resource Include="Resources\Images\logo_so_y_te_hcm.webp" />
-    <Resource Include="Resources\Images\logo_ttcn.webp" />
     <Resource Include="Resources\Images\logo_user.png" />
-    <Resource Include="Resources\Images\mobile.webp" />
-    <Resource Include="Resources\Images\mui1.webp" />
-    <Resource Include="Resources\Images\mui2.webp" />
-    <Resource Include="Resources\Images\mui3.webp" />
-    <Resource Include="Resources\Images\nguoi_den.webp" />
-    <Resource Include="Resources\Images\nguoi_do.webp" />
-    <Resource Include="Resources\Images\nguoi_vang.webp" />
-    <Resource Include="Resources\Images\nguoi_xanh.webp" />
-    <Resource Include="Resources\Images\no_data.webp" />
-    <Resource Include="Resources\Images\pheduyet.webp" />
-    <Resource Include="Resources\Images\scanqr.webp" />
-    <Resource Include="Resources\Images\scanqr4.webp" />
-    <Resource Include="Resources\Images\surface_1.webp" />
-    <Resource Include="Resources\Images\tamdung.webp" />
-    <Resource Include="Resources\Images\textTuanthu.webp" />
-    <Resource Include="Resources\Images\text_dthotro.webp" />
-    <Resource Include="Resources\Images\thedo.webp" />
-    <Resource Include="Resources\Images\thexanh.webp" />
-    <Resource Include="Resources\Images\tokhai.webp" />
-    <Resource Include="Resources\Images\tokhai4.webp" />
   </ItemGroup>
 
 </Project>
